--- a/backend/composer.json
+++ b/backend/composer.json
@@ -11,6 +11,7 @@
         "laravel/horizon": "^5.40",
         "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.10.1",
+        "predis/predis": "^3.3",
         "pusher/pusher-php-server": "^7.2"
     },
     "require-dev": {
