--- a/backend/.env.example
+++ b/backend/.env.example
@@ -62,9 +62,9 @@ AWS_DEFAULT_REGION=us-east-1
 AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
-PUSHER_APP_ID=xxxx
-PUSHER_APP_KEY=xxxx
-PUSHER_APP_SECRET=xxxx
+PUSHER_APP_ID=2091283
+PUSHER_APP_KEY=18d88a2e7b60479994f3
+PUSHER_APP_SECRET=571a3923df967f5c1d44
 PUSHER_APP_CLUSTER=eu
 
 VITE_APP_NAME="${APP_NAME}"
