--- a/backend/composer.json
+++ b/backend/composer.json
@@ -7,6 +7,7 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "brick/math": "^0.14.1",
         "laravel/framework": "^12.0",
         "laravel/horizon": "^5.40",
         "laravel/sanctum": "^4.0",
